made the blue a tad darker to fix contrast error

--- a/src/scss/_overrides.scss
+++ b/src/scss/_overrides.scss
@@ -10,7 +10,7 @@ $gray-800: #5E5E5E;
 $gray-900: #484848;
 $black:    #333333;
 
-$blue: #1A7AFF;
+$blue: #0066FF;
 $pink: #FF7373;
 
 $secondary: $pink;
